force-app/main/default/objects/Camp_Days__c/Camp_Days__c.object-meta.xml
<CustomObject>
    <description>this object  for manage camp days</description>
    <label>Camp Days</label>
    <nameField>
        <label>Camp day</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Camp Days</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>