force-app/main/default/objects/Camp_Days__c/fields/Camp_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Camp_End_Time__c</fullName>
    <description>this field for camp days for manage Camp End Time</description>
    <label>Camp End Time</label>
    <type>Time</type>
</CustomField>