force-app/main/default/objects/Camp_Days__c/fields/Camp_Name__c.field-meta.xml
<CustomField>
    <fullName>Camp_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Camp Name</label>
    <referenceTo>Camp__c</referenceTo>
    <relationshipLabel>Camp Days</relationshipLabel>
    <relationshipName>Camp_Days</relationshipName>
    <type>Lookup</type>
</CustomField>