force-app/main/default/objects/Camp_Days__c/fields/Camp_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Camp_Start_Time__c</fullName>
    <description>this field for camp days for manage Camp Start Time</description>
    <label>Camp Start Time</label>
    <type>Time</type>
</CustomField>