force-app/main/default/objects/Camp_Days__c/fields/Dates_Of_The_Camp__c.field-meta.xml
<CustomField>
    <fullName>Dates_Of_The_Camp__c</fullName>
    <description>this field for camp days for manage Dates Of The Camp</description>
    <label>Dates Of The Camp</label>
    <type>Date</type>
</CustomField>