force-app/main/default/objects/Camp_Days__c/fields/No_of_Students_Enrolled__c.field-meta.xml
<CustomField>
    <fullName>No_of_Students_Enrolled__c</fullName>
    <description>this field for camp days for manage camp No. of Students Enrolled</description>
    <label>No. of Students Enrolled</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>