force-app/main/default/objects/Camp_Days__c/listViews/All_Camps.listView-meta.xml
<ListView>
    <fullName>All_Camps</fullName>
    <columns>NAME</columns>
    <columns>Camp_End_Time__c</columns>
    <columns>Camp_Start_Time__c</columns>
    <columns>Camp_Teacher__c</columns>
    <columns>Dates_Of_The_Camp__c</columns>
    <columns>No_of_Students_Enrolled__c</columns>
    <columns>Status__c</columns>
    <filterScope>Mine</filterScope>
    <label>All Camps</label>
</ListView>